7903027: Initial support for Jemmy-based GUI reg tests fixed few terminally deprecated API usages