@@ -75,9 +75,9 @@ public class EqualsTest implements Test {
 
         boolean ok = true;
 
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
-        Integer three = new Integer(3);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
+        Integer three = Integer.valueOf(3);
 
         ok = ok & positive_test(new Object[]{});
         ok = ok & positive_test(new Object[]{null});
